--- a/clusters/tap-yellow-yannickl/cluster-config/values/tap-install-values.yaml
+++ b/clusters/tap-yellow-yannickl/cluster-config/values/tap-install-values.yaml
@@ -1,3 +1,3 @@
 tap_install:
   package_repository:
-    oci_repository: registry.tanzu.vmware.com/tanzu-application-platform/tap-packages
+    oci_repository: 2f4a0bd4f51240a8b51bd860be5933a3.azurecr.io/tap-yellow/tap-packages
