--- a/clusters/tap-yellow-yannickl/tanzu-sync/app/values/tanzu-sync.yaml
+++ b/clusters/tap-yellow-yannickl/tanzu-sync/app/values/tanzu-sync.yaml
@@ -4,4 +4,4 @@ git:
   ref: origin/master
   sub_path: clusters/tap-yellow-yannickl/cluster-config
 tap_package_repository:
-  oci_repository: registry.tanzu.vmware.com/tanzu-application-platform/tap-packages
+  oci_repository: 2f4a0bd4f51240a8b51bd860be5933a3.azurecr.io/tap-yellow/tap-packages
